Fix custom_repo entry on mobile

--- a/custom_components/hacs/frontend/elements/hacs.css
+++ b/custom_components/hacs/frontend/elements/hacs.css
@@ -82,6 +82,7 @@ td.repository.text {
   padding-left: 12px;
 }
 
+
 select.hacs-select.repository {
   width: 100%;
 }
@@ -194,6 +195,13 @@ a.dropdown-list-item:hover {
 }
 
 @media all and (max-width: 550px) {
+  select.hacs-select.custom_repository {
+    width: 100%;
+  }
+  input#custom_url {
+    width: 100% !important;
+  }
+
   .actionlink {
     width: 100%;
     padding: 5px;
